[tool.poetry]
name = "yfin"
version = "0.1.9"
description = ""
authors = ["Volker Lorrmann <volker.lorrmann@gmail.com>"]
readme = "README.md"
packages = [{ include = "yfin", from = "src" }]

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^1.5.3"
numpy = "^1.24.2"
requests = "^2.28.1"
lxml = "^4.9.1"
parallel-requests = {git = "https://github.com/legout/parallel-requests.git"}
tqdm = "^4.65.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
